[package]
name = "tunnel"
version = "0.1.0"
edition = "2021"
description = "Simple network tunnel as an example"

[features]
default = []
notifications = []
crypto = [
  "dep:rand",
  "dep:curve25519-dalek",
  "dep:ed25519-dalek",
  "dep:x25519-dalek",
  "dep:chacha20poly1305",
  "dep:sha2",
  "dep:base64",
]

[dependencies]
libc = { version = "0.2.155", features = ["std"], default-features = false }
signal-hook = { version = "0.3.17", features = [], default-features = false }
clap = { version = "4.5.11", features = ["std", "derive", "help"], default-features = false }
log = { version = "0.4.22", features = [], default-features = false }
env_logger = { version = "0.11.5", features = ["auto-color", "humantime"], default-features = false }
rand = { version = "0.8.5", features = ["std"], default-features = false, optional = true }
curve25519-dalek = { version = "4.1.3", features = [], default-features = false, optional = true }
ed25519-dalek = { version = "2.1.1", features = ["std", "rand_core"], default-features = false, optional = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], default-features = false, optional = true }
chacha20poly1305 = { version = "0.10.1", features = ["alloc", "getrandom"], default-features = false, optional = true }
sha2 = { version = "0.10.8", features = [], default-features = false, optional = true }
base64 = { version = "0.22.1", features = ["std"], default-features = false, optional = true }

[dev-dependencies]
ipnet = { version = "2.9.0", features = ["std"], default-features = false }

[build-dependencies]

[target.'cfg(target_os = "macos")'.build-dependencies]
serde = { version = "1.0.204", features = ["derive"], default-features = false }
serde_json = { version = "1.0.120", features = ["std"], default-features = false }
toml = { version = "0.8.16", features = ["parse"], default-features = false }

[package.metadata.bundle]
name = "tunnel"
identifier = "com.example.simple.tunnel"
icon = [
  "macos_bundle/images/32x32.png",
  "macos_bundle/images/128x128.png",
  "macos_bundle/images/128x128@2x.png",
]
